<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F4CD6C"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/quiz_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/check_your_knowledge_related_to_android"
            android:textAlignment="center"
            android:textColor="#105513"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quiz_heading">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/each_question_carry_2_marks_total_20_marks"
                android:textAlignment="center"
                android:textColor="#E16161" />

            <ImageView
                android:id="@+id/questionMark"
                android:layout_width="332dp"
                android:layout_height="285dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:srcCompat="@drawable/quiz"
                tools:ignore="MissingConstraints" />

            <androidx.cardview.widget.CardView style="@style/cardViewStyle">

                <LinearLayout style="@style/linearLayoutStyle">

                    <TextView
                        android:id="@+id/question1"
                        style="@style/questionTextStyle"
                        android:text="@string/question1" />

                    <RadioGroup
                        android:id="@+id/ques1_options"
                        style="@style/radioGroupStyle">


                        <RadioButton
                            android:id="@+id/q1op1"
                            style="@style/radioButtonStyle"
                            android:text="@string/q1a1"
                            tools:text="false" />

                        <RadioButton
                            android:id="@+id/q1op2"
                            style="@style/radioButtonStyle"
                            android:text="@string/q1a2"
                            tools:text="false" />

                        <RadioButton
                            android:id="@+id/q1op3"
                            style="@style/radioButtonStyle"
                            android:text="@string/q1a3"
                            tools:text="false" />

                        <RadioButton
                            android:id="@+id/q1op4"
                            style="@style/radioButtonStyle"
                            android:text="@string/q1a4"
                            tools:text="@string/q1a4True" />

                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView style="@style/cardViewStyle">

                <LinearLayout style="@style/linearLayoutStyle">

                    <TextView
                        android:id="@+id/question2"
                        style="@style/questionTextStyle"
                        android:text="@string/question2" />

                    <RadioGroup
                        android:id="@+id/ques2_options"
                        style="@style/radioGroupStyle">

                        <RadioButton
                            android:id="@+id/q2op1"
                            style="@style/radioButtonStyle"
                            android:text="@string/q2a1"
                            tools:text="@string/q2a1True" />

                        <RadioButton
                            android:id="@+id/q2op2"
                            style="@style/radioButtonStyle"
                            android:text="@string/q2a2"
                            tools:text="false" />

                        <RadioButton
                            android:id="@+id/q2op3"
                            style="@style/radioButtonStyle"
                            android:text="@string/q2a3"
                            tools:text="false" />

                        <RadioButton
                            android:id="@+id/q2op4"
                            style="@style/radioButtonStyle"
                            android:text="@string/q2a4"
                            tools:text="false" />


                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView style="@style/cardViewStyle">

                <LinearLayout style="@style/linearLayoutStyle">

                    <TextView
                        android:id="@+id/question3"
                        style="@style/questionTextStyle"
                        android:text="@string/question3" />

                    <RadioGroup
                        android:id="@+id/ques3_options"
                        style="@style/radioGroupStyle">

                        <RadioButton
                            android:id="@+id/q3op1"
                            style="@style/radioButtonStyle"
                            android:text="@string/q3a1"
                            tools:text="@string/q3a1True" />

                        <RadioButton
                            android:id="@+id/q3op2"
                            style="@style/radioButtonStyle"
                            android:text="@string/q3a2"
                            tools:text="false" />

                        <RadioButton
                            android:id="@+id/q3op3"
                            style="@style/radioButtonStyle"
                            android:text="@string/q3a3"
                            tools:text="false" />

                        <RadioButton
                            android:id="@+id/q3op4"
                            style="@style/radioButtonStyle"
                            android:text="@string/q3a4"
                            tools:text="false" />

                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView style="@style/cardViewStyle">

                <LinearLayout style="@style/linearLayoutStyle">

                    <TextView
                        android:id="@+id/question4"
                        style="@style/questionTextStyle"
                        android:text="@string/question4" />

                    <RadioGroup
                        android:id="@+id/ques4_options"
                        style="@style/radioGroupStyle">

                        <RadioButton
                            android:id="@+id/q4op1"
                            style="@style/radioButtonStyle"
                            android:text="@string/q4a1"
                            tools:text="false" />

                        <RadioButton
                            android:id="@+id/q4op2"
                            style="@style/radioButtonStyle"
                            android:text="@string/q4a2"
                            tools:text="@string/q4a2True" />

                        <RadioButton
                            android:id="@+id/q4op3"
                            style="@style/radioButtonStyle"
                            android:text="@string/q4a3"
                            tools:text="false" />

                        <RadioButton
                            android:id="@+id/q4op4"
                            style="@style/radioButtonStyle"
                            android:text="@string/q4a4"
                            tools:text="false" />

                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView style="@style/cardViewStyle">

                <LinearLayout style="@style/linearLayoutStyle">

                    <TextView
                        android:id="@+id/question5"
                        style="@style/questionTextStyle"
                        android:text="@string/question5" />

                    <CheckBox
                        android:id="@+id/q5op1"
                        style="@style/checkBoxStyle"
                        android:text="@string/q5a1" />


                    <CheckBox
                        android:id="@+id/q5op2"
                        style="@style/checkBoxStyle"
                        android:text="@string/q5a2" />

                    <CheckBox
                        android:id="@+id/q5op3"
                        style="@style/checkBoxStyle"
                        android:text="@string/q5a3" />

                    <CheckBox
                        android:id="@+id/q5op4"
                        style="@style/checkBoxStyle"
                        android:text="@string/q5a4" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView style="@style/cardViewStyle">

                <LinearLayout style="@style/linearLayoutStyle">

                    <TextView
                        android:id="@+id/question6"
                        style="@style/questionTextStyle"
                        android:text="@string/question6" />

                    <RadioGroup
                        android:id="@+id/ques6_options"
                        style="@style/radioGroupStyle">


                        <RadioButton
                            android:id="@+id/q6op1"
                            style="@style/radioButtonStyle"
                            android:text="@string/q6a1"
                            tools:text="false" />

                        <RadioButton
                            android:id="@+id/q6op2"
                            style="@style/radioButtonStyle"
                            android:text="@string/q6a2"
                            tools:text="false" />

                        <RadioButton
                            android:id="@+id/q6op3"
                            style="@style/radioButtonStyle"
                            android:text="@string/q6a3"
                            tools:text="false" />

                        <RadioButton
                            android:id="@+id/q6op4"
                            style="@style/radioButtonStyle"
                            android:text="@string/q6a4"
                            tools:text="@string/q6a4True" />

                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView style="@style/cardViewStyle">

                <LinearLayout style="@style/linearLayoutStyle">

                    <TextView
                        android:id="@+id/question7"
                        style="@style/questionTextStyle"
                        android:text="@string/question7" />

                    <CheckBox
                        android:id="@+id/q7op1"
                        style="@style/checkBoxStyle"
                        android:text="@string/q7a1" />


                    <CheckBox
                        android:id="@+id/q7op2"
                        style="@style/checkBoxStyle"
                        android:text="@string/q7a2" />

                    <CheckBox
                        android:id="@+id/q7op3"
                        style="@style/checkBoxStyle"
                        android:text="@string/q7a3" />

                    <CheckBox
                        android:id="@+id/q7op4"
                        style="@style/checkBoxStyle"
                        android:text="@string/q7a4" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView style="@style/cardViewStyle">

                <LinearLayout style="@style/linearLayoutStyle">

                    <TextView
                        android:id="@+id/question8"
                        style="@style/questionTextStyle"
                        android:text="@string/question8" />

                    <CheckBox
                        android:id="@+id/q8op1"
                        style="@style/checkBoxStyle"
                        android:text="@string/q8a1" />


                    <CheckBox

                        android:id="@+id/q8op2"
                        style="@style/checkBoxStyle"
                        android:text="@string/q8a2" />

                    <CheckBox
                        android:id="@+id/q8op3"
                        style="@style/checkBoxStyle"
                        android:text="@string/q8a3" />

                    <CheckBox
                        android:id="@+id/q8op4"
                        style="@style/checkBoxStyle"
                        android:text="@string/q8a4" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView style="@style/cardViewStyle">

                <LinearLayout style="@style/linearLayoutStyle">

                    <TextView
                        android:id="@+id/question9"
                        style="@style/questionTextStyle"
                        android:text="@string/question9" />

                    <EditText
                        android:id="@+id/q9Ans"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:hint="@string/ans9" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView style="@style/cardViewStyle">

                <LinearLayout style="@style/linearLayoutStyle">

                    <TextView
                        android:id="@+id/question10"
                        style="@style/questionTextStyle"
                        android:text="@string/question10" />

                    <EditText
                        android:id="@+id/q10Ans"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:hint="@string/ans10" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:background="@color/colorPrimary"
                android:onClick="submitQuiz"
                android:text="@string/submit"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>